# wdmcp

./: .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SKILL.md  package.json  skill.json
.github/workflows/: release.yml
scripts/: install.js  release.sh  run.js
skills/: README.md  agent.md  batch.md  browser.md  repl.md  selectors.md  session.md  tabs.md
src/: batch.rs  commands.rs  driver.rs  main.rs  manager.rs  mcp.rs  setup.rs  store.rs  types.rs  webdriver.rs
src/agent/: dom.rs  memory.rs  mod.rs  network.rs  slots.rs
tests/: agent.rs  batch.rs  browser.rs  click_fallback.rs  driver.rs  mcp.rs  network.rs  repl.rs  session.rs  smoke.rs  tabs.rs
tests/common/: mod.rs
tests/fixtures/: test-batch.json  test-page.html
