[package]
name = "browsectl"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "browsectl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = { version = "17", features = ["derive"] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "process",
    "fs",
    "io-std",
    "io-util",
    "sync",
] }

[dev-dependencies]
serial_test = "3"

[profile.release]
opt-level = 2
strip = true
